<resources>
    <string name="app_name">提姆游</string>
    <string name="startlocation">开始定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="title_user_info_change">用户信息更改</string>
    <string name="title_team_info_change">队伍信息更改</string>
    <string name="table_scope_title">选择一个表查看数据</string>
    <string name="demo_name_layers">图层展示</string>
    <string name="demo_title_layers">图层展示--LayersDemo</string>
    <string name="demo_desc_layers">展示普通图、卫星图、交通流量图及百度城市热力图</string>
    <string name="demo_name_control">地图操作功能</string>
    <string name="demo_desc_control">介绍地图基本控制方法，对地图单击、长按、双击、截图的事件响应</string>
    <string name="demo_desc_location">介绍定位图层的基本用法</string>
    <string name="demo_name_geometry">自定义绘制功能，折线可点击</string>
    <string name="demo_title_geometry">自定义绘制功能--GeometryDemo</string>
    <string name="demo_desc_geometry">介绍自定义绘制点、线、多边形、圆等几何图形和文字</string>
    <string name="demo_name_favorite">点收藏功能</string>
    <string name="demo_title_favorite">点收藏功能--FavoriteDemo</string>
    <string name="demo_desc_favorite">介绍如何创建、管理本地点数据</string>
    <string name="demo_name_mass_transit_route">综合路线规划功能</string>
    <string name="demo_title_mass_transit_route">综合路线规划功能--MassTransitRouteDemo</string>
    <string name="demo_desc_mass_transit_route">介绍跨城、同城、综合路线规划及自定义图标方法</string>
    <string name="demo_name_transit_route">公交路线规划功能</string>
    <string name="demo_title_transit_route">公交路线规划功能--TransitRoutePlanDemo</string>
    <string name="demo_desc_transit_route">介绍公交路线规划及自定义图标方法</string>
    <string name="demo_name_walking_route">步行路线规划功能</string>
    <string name="demo_title_walking_route">步行路线规划功能--WalkingRouteSearchDemo</string>
    <string name="demo_desc_walking_route">介绍步行路线规划及自定义图标方法</string>
    <string name="demo_name_biking_route">骑行路线规划功能</string>
    <string name="demo_title_biking_route">骑行路线规划功能--BikingRouteSearchDemo</string>
    <string name="demo_desc_biking_route">介绍骑行路线规划及自定义图标方法</string>
    <string name="demo_name_driving_route">驾车路线规划功能</string>
    <string name="demo_title_driving_route">驾车路线规划功能--DrivingRouteSearchDemo</string>
    <string name="demo_desc_driving_route">介绍驾车线路规划、驾车策略、路况展示及自定义图标方法</string>
    <string name="demo_name_route">室内路径规划功能</string>
    <string name="demo_name_regeocode">逆地理编码功能</string>
    <string name="demo_title_regeocode">逆地理编码功能--ReverseGeoCodeDemo</string>
    <string name="demo_desc_regeocode">介绍地址信息与坐标之间的相互转换，获取周边的poi信息</string>
    <string name="demo_name_geocode">地理编码功能</string>
    <string name="demo_title_geocode">地理编码功能--GeoCodeDemo</string>
    <string name="demo_desc_geocode">介绍地址信息与坐标之间的相互转换</string>
    <string name="demo_name_recommendstop">推荐上车点功能</string>
    <string name="demo_title_recommendstop">推荐上车点功能--RecommendStopDemo</string>
    <string name="demo_desc_recommendstop">介绍推荐上车点功能</string>
    <string name="demo_name_bus">公交线路查询功能</string>
    <string name="demo_title_bus">公交线路查询功能--BusLineSearchDemo</string>
    <string name="demo_desc_bus">介绍查询公交线路功能</string>
    <string name="demo_name_open_baidumap">调启百度地图</string>
    <string name="demo_title_open_baidumap">调启百度地图--OpenBaiduMap</string>
    <string name="demo_desc_open_baidumap">介绍如何调启百度地图实现自身业务功能</string>
    <string name="demo_name_cloud">LBS.云检索功能</string>
    <string name="demo_title_cloud">LBS.云检索功能--CloudSearchDemo</string>
    <string name="demo_desc_cloud">介绍如何使用LBS.云检索用户自有数据</string>
    <string name="demo_name_weather">天气检索功能</string>
    <string name="demo_title_weather">天气检索功能--WeatherSearchDemo</string>
    <string name="demo_desc_weather">介绍如何检索天气</string>
    <string name="demo_name_heatmap">热力图功能</string>
    <string name="demo_desc_heatmap">介绍如何以热力图形式显示用户自有数据</string>
    <string name="demo_name_opengl">OpenGL绘制功能</string>
    <string name="demo_title_opengl">OpenGL绘制功能--OpenGLDemo</string>
    <string name="demo_title_cluster">点聚合功能--MarkerClusterDemo</string>
    <string name="demo_name_tileoverlay">瓦片图功能</string>
    <string name="demo_desc_cluster">介绍如何实现多个Marker点的点聚合功能，适合添加大批量marker场景</string>
    <string name="demo_title_tileoverlay">瓦片图功能--TileOverlayDemo</string>
    <string name="demo_desc_tileoverlay">介绍如何在地图上添加自定义的瓦片图</string>
    <string name="demo_desc_districsearch">介绍如何使用行政区域检索，并绘制区域边界</string>
    <string name="demo_title_districsearch">行政区域检索--DistrictSearchDemo</string>
    <string name="demo_name_districsearch">行政区域检索</string>
    <string name="demo_name_indoorsearch">室内图检索功能</string>
    <string name="demo_title_indoorsearch">室内图检索--IndoorSearchDemo</string>
    <string name="demo_desc_indoorsearch">介绍在室内图中进行室内POI检索</string>
    <string name="demo_name_track_show">小车轨迹平滑移动</string>
    <string name="demo_title_track_show">小车轨迹平滑移动--TrackShowDemo</string>
    <string name="demo_desc_track_show">介绍小车轨迹平滑移动的实现</string>
    <string name="demo_title_util">实用工具</string>
    <string name="demo_desc_util">介绍距离计算、坐标转换、调启百度地图功能等工具的使用</string>
    <string name="demo_title_distance">两点间距离--DistanceUtilDemo</string>
    <string name="demo_desc_distance">两点间距离计算</string>
    <string name="demo_name_contains">点与圆、多边形的位置关系</string>
    <string name="demo_title_contains">点与圆、多边形的位置关系--SpatialRelationDemo</string>
    <string name="demo_desc_contains">判断点与圆、多边形的位置关系</string>
    <string name="demo_title_routeplan">路线规划</string>
    <string name="demo_desc_routeplan">介绍跨城交通、公交、驾车、步行、骑行五种线路规划方法</string>
    <string name="demo_name_indoorroute">室内路线规划</string>
    <string name="demo_title_indoorroute">室内路线规划--IndoorRouteDemo</string>
    <string name="demo_desc_indoorroute">介绍室内路线规划功能</string>
    <string name="demo_title_searchlist">检索地图数据</string>
    <string name="demo_desc_searchlist">介绍地图检索功能，包括POI检索，公交信息检索，地理编码检索等</string>
    <string name="demo_name_poidetailsearch">详情POI搜索功能</string>
    <string name="demo_title_poidetailsearch">详情POI搜索功能--PoiDetailSearchDemo</string>
    <string name="demo_desc_poidetailsearch">介绍使用UID搜索POI详情功能</string>
    <string name="demo_name_poicitysearch">城市POI搜索功能</string>
    <string name="demo_title_poicitysearch">城市POI搜索功能--PoiCitySearchDemo</string>
    <string name="demo_desc_poicitysearch">介绍城市POI查询，POI父子节点展示</string>
    <string name="demo_name_poinearbysearch">周边POI搜索功能</string>
    <string name="demo_title_poinearbysearch">周边POI搜索功能--PoiNearbySearchDemo</string>
    <string name="demo_desc_poinearbysearch">介绍周边POI查询、POI父子节点展示</string>
    <string name="demo_name_poiboundsearch">矩形POI搜索功能</string>
    <string name="demo_title_poiboundsearch">矩形POI搜索功能--PoiBoundSearchDemo</string>
    <string name="demo_desc_poiboundsearch">介绍矩形POI查询、POI父子节点展示</string>
    <string name="demo_name_poisugsearch">提示POI搜索功能</string>
    <string name="demo_title_poisugsearch">提示POI搜索功能--PoiSugSearchDemo</string>
    <string name="demo_desc_poisugsearch">介绍地点检索输入提示</string>
    <string name="demo_title_drawlist">在地图上绘制</string>
    <string name="demo_desc_drawlist">介绍自定义绘制点、线、多边形、圆等几何图形和文字</string>
    <string name="demo_name_polyline">绘制线</string>
    <string name="demo_title_polyline">绘制线--PolylineDemo</string>
    <string name="demo_desc_polyline">介绍在地图上绘制线并添加事件响应</string>
    <string name="demo_name_marker_animation">Marker动画功能</string>
    <string name="demo_title_marker_animation">Marker动画功能--MarkerAnimationDemo</string>
    <string name="demo_desc_marker_animation">展示Marker动画:缩放、平移、旋转、透明、组合动画</string>
    <string name="demo_name_circle">绘制圆</string>
    <string name="demo_title_circle">绘制圆--CircleDemo</string>
    <string name="demo_desc_circle">介绍在地图上绘制圆</string>
    <string name="demo_name_arc">绘制弧</string>
    <string name="demo_title_arc">绘制弧--ArcDemo</string>
    <string name="demo_desc_arc">介绍在地图上绘制弧线</string>
    <string name="demo_name_marker">覆盖物功能</string>
    <string name="demo_title_marker">绘制点标记--MarkerDemo</string>
    <string name="demo_desc_marker">介绍Marker绘制，Marker动画、Marker响应事件、InfoWindow展示、InfoWindow响应事件</string>
    <string name="demo_name_polygon">绘制多边形</string>
    <string name="demo_title_polygon">绘制多边形--PolygonDemo</string>
    <string name="demo_desc_polygon">介绍在地图上绘制多边形</string>
    <string name="demo_name_groundoverlay">自定义图片图层</string>
    <string name="demo_title_groundoverlay">自定义图片图层--GroundOverlayDemo</string>
    <string name="demo_desc_groundoverlay">介绍在地图上添加图片覆盖物</string>
    <string name="demo_title_tile">自定义瓦片图--TileOverlayDemo</string>
    <string name="demo_desc_tile">介绍如何在地图上添加自定义的瓦片图</string>
    <string name="demo_title_heat">自定义热力图--HeatMapDemo</string>
    <string name="demo_desc_heat">介绍如何以热力图形式显示用户自有数据</string>
    <string name="demo_title_layerlist">图层展示</string>
    <string name="demo_desc_layerlist">卫星图、交通流量图、百度城市热力图、3D地图及定位图层的展示</string>
    <string name="demo_title_layertraffic">路况图及热力图--LayerTrafficAndHeatMapDemo</string>
    <string name="demo_name_layertraffic">路况图及热力图功能</string>
    <string name="demo_desc_layertraffic">展示地图中路况和热力图的使用</string>
    <string name="demo_name_locationtype">显示定位（定位模式切换)</string>
    <string name="demo_title_locationtype">显示定位（定位模式切换)--LocationTypeDemo</string>
    <string name="demo_desc_locationtype">展示定位图层三种定位模式的使用</string>
    <string name="demo_name_locationcustom">显示定位（自定义样式)</string>
    <string name="demo_title_locationcustom">显示定位（自定义样式)--LocationCustomDemo</string>
    <string name="demo_desc_locationcustom">展示定位图层自定义样式的使用</string>
    <string name="demo_title_layerbuilding">3D楼宇--LayerBuildingDemo</string>
    <string name="demo_name_layerbuilding">3D楼宇</string>
    <string name="demo_desc_layerbuilding">图层展示（3D楼宇）</string>
    <string name="demo_title_createmaplist">创建地图</string>
    <string name="demo_name_custom">个性化地图</string>
    <string name="demo_desc_createmaplist">基础地图、个性化地图、TextureMapView、离线地图、室内地图以及多地图创建</string>
    <string name="demo_title_custommap">个性化地图--CustomMapDemo</string>
    <string name="demo_desc_custommap">介绍个性化地图的创建和使用</string>
    <string name="demo_name_map_type">基础地图类型</string>
    <string name="demo_name_offline">离线地图</string>
    <string name="demo_title_offline">离线地图功能--OfflineDemo</string>
    <string name="demo_desc_offline">介绍如何下载和使用离线地图</string>
    <string name="demo_name_map_fragment">基于MapFragment的基本地图</string>
    <string name="demo_title_map_fragment">MapFragment使用--MapFragmentDemo</string>
    <string name="demo_desc_map_fragment">创建一个基于Fragment的地图框架</string>
    <string name="demo_name_indoor">室内图展示</string>
    <string name="demo_title_indoor">室内图--IndoorMapDemo</string>
    <string name="demo_desc_indoor">介绍室内图功能，显示室内图</string>
    <string name="demo_name_multimap">多地图展示</string>
    <string name="demo_title_multimap">多地图展示--MultiMapViewDemo</string>
    <string name="demo_desc_multimap">在一个Activity中创建多个地图展示，不同城市，不同logo位置</string>
    <string name="demo_name_texturemapview">TextureMapView</string>
    <string name="demo_title_texturemapview">TextureMapView使用--TextureMapViewDemo</string>
    <string name="demo_desc_texturemapview">地图由TextureView渲染</string>
    <string name="demo_title_mapcontrollist">与地图交互</string>
    <string name="demo_desc_mapcontrollist">介绍地图基本控制方法，事件响应、手势控制以及UI控件的显示与隐藏</string>
    <string name="demo_name_gesture">手势设置</string>
    <string name="demo_title_gesture">手势设置--UISettingsDemo</string>
    <string name="demo_desc_gesture">缩放、平移、旋转、俯视等手势的开启和禁用</string>
    <string name="demo_name_mapstatus">事件交互（地图状态)</string>
    <string name="demo_title_mapstatus">事件交互（地图状态)--MapStatusDemo</string>
    <string name="demo_desc_mapstatus">地图状态改变的事件响应</string>
    <string name="demo_name_mapclick">事件交互(点击)</string>
    <string name="demo_title_mapclick">事件交互(点击)--MapClickDemo</string>
    <string name="demo_desc_mapclick">对地图单击、长按、双击的事件响应</string>
    <string name="demo_title_map_type">地图类型--MapTypeDemo</string>
    <string name="user_more_detail">更多信息</string>
    <string name="user_detail_gender">性别</string>
    <string name="user_detail_signature">个性签名</string>
    <string name="user_detail_real_name">真实姓名</string>
    <string name="user_detail_identity_num">身份证号</string>
    <string name="user_detail_email">电子邮箱</string>
</resources>