<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg">

    <com.hyphenate.easeui.widget.EaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/em_common_title_bar_height"
        app:titleBarTitle="@string/user_more_detail"
        app:titleBarDisplayHomeAsUpEnabled="true" />

    <com.hyphenate.easeim.common.widget.ArrowItemView
        android:id="@+id/item_gender"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_item_detail_height"
        app:arrowItemTitle="@string/user_detail_gender"
        android:background="@color/white" />

    <com.hyphenate.easeim.common.widget.ArrowItemView
        android:id="@+id/item_signature"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_item_detail_height"
        app:arrowItemTitle="@string/user_detail_signature"
        android:background="@color/white" />

    <com.hyphenate.easeim.common.widget.ArrowItemView
        android:id="@+id/item_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_item_detail_height"
        app:arrowItemTitle="@string/user_detail_email"
        android:background="@color/white" />

    <com.hyphenate.easeim.common.widget.ArrowItemView
        android:id="@+id/item_real_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_item_detail_height"
        app:arrowItemTitle="@string/user_detail_real_name"
        android:background="@color/white" />

    <com.hyphenate.easeim.common.widget.ArrowItemView
        android:id="@+id/item_identity_num"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_item_detail_height"
        app:arrowItemTitle="@string/user_detail_identity_num"
        android:background="@color/white" />


</LinearLayout>